# student_ui_demo

./: .gitattributes  README.md  pubspec.yaml
docs/: audio_evidence_capture_wiring.md  camera_evidence_capture_wiring.md  live_event_evidence_next_targets.md  live_monitor_audio_evidence_next_step.md  local_patch_live_object_events.md  local_patch_object_model_gate.md  local_patch_rust_scan_frame_review.md  native_attempt_recovery_migration.md  native_audio_intelligence_migration.md  native_evidence_vault_wiring.md  native_lockdown_migration.md  native_system_security_migration.md  native_vision_priority_plan.md  pilot_ready_institutional_scope.md  secure_exam_lockdown_notes.md
lib/: main.dart
linux/: CMakeLists.txt
native/brain_core/: Cargo.toml
native/brain_core/src/: ffi_exports.rs  frb_generated.rs  lib.rs
native/brain_core/src/api/: attempt_recovery.rs  audio_intelligence.rs  evidence_vault.rs  lockdown.rs  mod.rs  native_vision.rs  proctoring.rs  system_security.rs
native/brain_core/tests/: attempt_recovery_tests.rs  audio_intelligence_tests.rs  evidence_vault_tests.rs  lockdown_tests.rs  native_vision_tests.rs  system_security_tests.rs
patches/: demo_attempt_device_gate.patch  demo_attempt_monitoring_profile.patch  demo_home_assignment_submission.patch  demo_home_hub_extras.patch  live_exam_cooldown_gate.patch  live_exam_object_events.patch
rust/: Cargo.toml
test/: assessment_device_access_policy_test.dart  assessment_device_gate_test.dart  assessment_monitoring_profile_test.dart  assignment_submission_view_test.dart  widget_test.dart  (+9 more)
(+135 files in other folders)
